
2021-02-24	version	00-000B
	WARNING: I have noticed some odd checkmate related bugs in this version.
		 Please create an issue on github or contact me on email (theshoutingparrot@protonmail.com)
	Implemented draw as a result of insufficent material and now correctly checks repitition.

	source file changes
		* src/piece: created new function for checking if there aren't enough pieces for a checkmate (checkIfEnoughPieces)
		* src/move.c (movePiece): now calls the checkIfEnoughPieces to check for enough pieces
		* src/position.c (updatePosition): now updates the amount of pieces (piecesArray)
		* src/position_list.c (checkForRepitition): corrected repitition checking

	header file changes
		* include/vgcp: added warning about unstability of this program (for now),
			added an array of pieces (piecesArray) which stores the amount of different pieces on the board

2021-02-24	version	00-000C
	WARNING: The previous warning (on version 00-000B) also applies to this version.
	Changed default size of window to 800x800 and merged src/position.c and src/position_list.c

	source file changes
		* src/position.c: merged file with position_list.c

	header file changes
		* include/vgcp.h: changed default window size definitions, slightly changed wording of warnings

	Edit 2021-02-25: added warning

2021-02-25	version	00-000D
	GOOD NEWS: The checkmate related bug has been fixed.
	Fixed the odd checkmate related bug (stalemates resulting in checkmates for example), moved the kingLocation variable to the position structure, fixed other errors.

	source file changes
		* src/position.c (initPosition): moved kingLocation initializing here
		* src/move.c (movePiece): fixed kingLocation not being properly set
		* src/draw.c (drawBoardRow): now the tile that the king is in (according to king location)
			is red.
		* src/piece.c (mapKingPotentialMoves): fixed a bug allowing players to castle 
			even after castling rights have been lost if the other player still has castling
			rights.